--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -620,7 +620,7 @@ a {
 }
 .cid-rVs1JRXiBo .dropdown-menu,
 .cid-rVs1JRXiBo .navbar.opened {
-  background: #58b39a !important;
+  background: #ffffff !important;
 }
 .cid-rVs1JRXiBo .nav-item:focus,
 .cid-rVs1JRXiBo .nav-link:focus {
@@ -1024,6 +1024,287 @@ a {
 .cid-rVs1KGgY6Y .mbr-section-title,
 .cid-rVs1KGgY6Y .mbr-section-btn {
   color: #f9fafb;
+}
+.cid-rWgwfVcXz5.popup-builder {
+  background-color: #ffffff;
+}
+.cid-rWgwfVcXz5.popup-builder .modal {
+  position: relative;
+  display: block;
+  z-index: 1;
+}
+.cid-rWgwfVcXz5.popup-builder .modal-dialog {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.cid-rWgwfVcXz5 .modal-content,
+.cid-rWgwfVcXz5 .modal-dialog {
+  height: auto;
+}
+.cid-rWgwfVcXz5 .form-wrapper .input-group-btn {
+  margin-right: auto;
+  margin-left: auto;
+}
+.cid-rWgwfVcXz5 .form-wrapper .input-group-btn .btn {
+  margin: 0 !important;
+}
+@media (min-width: 769px) {
+  .cid-rWgwfVcXz5 .form-wrapper .mbr-form .form-group,
+  .cid-rWgwfVcXz5 .form-wrapper .mbr-form .input-group-btn {
+    padding: 0 .5rem;
+  }
+}
+.cid-rWgwfVcXz5 .card-img {
+  width: 100%;
+  margin: auto;
+  border-radius: 0;
+}
+.cid-rWgwfVcXz5 .mbr-figure img {
+  display: block;
+  width: 100%;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rWgwfVcXz5 .mbr-text {
+  text-align: center;
+}
+.cid-rWgwfVcXz5 .pt-0 {
+  padding-top: 0 !important;
+}
+.cid-rWgwfVcXz5 .pb-0 {
+  padding-bottom: 0 !important;
+}
+.cid-rWgwfVcXz5 .form-content {
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
+}
+.cid-rWgwfVcXz5 .mbr-overlay {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 0;
+  pointer-events: none;
+}
+.cid-rWgwfVcXz5 .modal-open {
+  overflow: hidden;
+}
+.cid-rWgwfVcXz5 .modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.cid-rWgwfVcXz5 .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1050;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  outline: 0;
+}
+.cid-rWgwfVcXz5 .modal-dialog {
+  position: relative;
+  width: auto;
+  margin: .5rem;
+  pointer-events: none;
+}
+.cid-rWgwfVcXz5 .modal.fade .modal-dialog {
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+  -webkit-transform: translate(0, -50px);
+  transform: translate(0, -50px);
+}
+.cid-rWgwfVcXz5 .modal.show .modal-dialog {
+  -webkit-transform: none;
+  transform: none;
+}
+.cid-rWgwfVcXz5 .modal-dialog-centered {
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  min-height: calc(100% - (.5rem * 2));
+}
+.cid-rWgwfVcXz5 .modal-dialog-centered::before {
+  display: block;
+  height: calc(100vh - (.5rem * 2));
+  content: "";
+}
+.cid-rWgwfVcXz5 .modal-content {
+  background: #ffffff;
+  position: relative;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-clip: padding-box;
+  border: none;
+  outline: 0;
+  -webkit-box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
+}
+.cid-rWgwfVcXz5 .modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1040;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+}
+.cid-rWgwfVcXz5 .modal-backdrop.fade {
+  opacity: 0;
+}
+.cid-rWgwfVcXz5 .modal-backdrop.show {
+  opacity: .5;
+}
+.cid-rWgwfVcXz5 .modal-header {
+  display: flex;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 1rem;
+  border-bottom: none;
+}
+.cid-rWgwfVcXz5 .modal-header .close {
+  position: absolute;
+  top: auto;
+  right: 1rem;
+  margin: -1rem -1rem -1rem auto;
+  padding: 1rem;
+  opacity: .75;
+}
+.cid-rWgwfVcXz5 .modal-header .close:hover {
+  opacity: 1;
+}
+.cid-rWgwfVcXz5 .modal-header .close:focus {
+  outline: none;
+}
+.cid-rWgwfVcXz5 .modal-title {
+  line-height: 1.5;
+  width: 100%;
+  margin: 0;
+  text-align: center;
+  color: #58b39a;
+}
+.cid-rWgwfVcXz5 .modal-body {
+  position: relative;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1rem;
+  min-height: 100%;
+}
+.cid-rWgwfVcXz5 .modal-footer {
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 1rem;
+  border-top: none;
+  text-align: center;
+}
+.cid-rWgwfVcXz5 .modal-scrollbar-measure {
+  position: absolute;
+  top: -9999px;
+  width: 50px;
+  height: 50px;
+  overflow: scroll;
+}
+@media (min-width: 576px) {
+  .cid-rWgwfVcXz5 .modal-dialog {
+    max-width: 500px;
+    margin: 1.75rem auto;
+  }
+  .cid-rWgwfVcXz5 .modal-dialog-centered {
+    min-height: calc(100% - (1.75rem * 2));
+  }
+  .cid-rWgwfVcXz5 .modal-dialog-centered::before {
+    height: calc(100vh - (1.75rem * 2));
+  }
+  .cid-rWgwfVcXz5 .modal-sm {
+    max-width: 300px;
+  }
+  .cid-rWgwfVcXz5 .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 992px) {
+  .cid-rWgwfVcXz5 .modal-lg,
+  .cid-rWgwfVcXz5 .modal-xl {
+    max-width: 800px;
+  }
+  .cid-rWgwfVcXz5 .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .cid-rWgwfVcXz5 .modal-xl {
+    max-width: 1140px;
+  }
+  .cid-rWgwfVcXz5 .container {
+    max-width: 1140px;
+  }
+}
+.cid-rWgwfVcXz5 .container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 768px) {
+  .cid-rWgwfVcXz5 .container {
+    max-width: 720px;
+  }
+}
+.cid-rWgwfVcXz5 .row {
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.cid-rWgwfVcXz5 .col-md-4 {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  -ms-flex: 0 0 33.333333%;
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+}
+.cid-rWgwfVcXz5 .form-group {
+  margin-bottom: 1rem;
+}
+.cid-rWgwfVcXz5 .form-control {
+  display: block;
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+.cid-rWgwfVcXz5 .col {
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  max-width: 100%;
+}
+.cid-rWgwfVcXz5 .col-md-auto {
+  position: relative;
+  padding-right: 15px;
+  padding-left: 15px;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  width: auto;
+  max-width: 100%;
 }
 .cid-rVs1KWs4Qc {
   padding-top: 90px;
@@ -1631,6 +1912,9 @@ a {
   .cid-rVs1MBHQrj .card {
     max-width: 14.28%;
   }
+}
+.cid-rVs1MBHQrj .mbr-section-title {
+  color: #58b39a;
 }
 .cid-rVs1Nz9nWp {
   padding-top: 165px;
